# Geekpoly

./: .gitignore  Button.c  Button.h  CMakeLists.txt  GUI.c  GUI.h  Geekpoly.xmind  boxes_management.c  boxes_management.h  defines.h  frees.c  frees.h  graphics.c  graphics.h  initialisation.c  initialisation.h  jeu.c  jeu.h  mouse_management.c  mouse_management.h  option.c  option.h  structures.h
Binary/sources/: chances.txt  messages.txt  terrain.txt
